src/test/ui/did_you_mean/issue-40396.stderr
error: comparison operators cannot be chained
  --> $DIR/issue-40396.rs:2:20
   |
LL |     (0..13).collect<Vec<i32>>();
   |                    ^^^^^
   |
help: split the comparison into two...
   |
LL |     (0..13).collect < Vec && Vec <i32>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: ...or parenthesize one of the comparisons
   |
LL |     ((0..13).collect < Vec) <i32>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
help: use `::<...>` instead of `<...>` to specify type arguments
   |
LL |     (0..13).collect::<Vec<i32>>();
   |                    ^^

error: comparison operators cannot be chained
  --> $DIR/issue-40396.rs:4:8
   |
LL |     Vec<i32>::new();
   |        ^^^^^
   |
help: use `::<...>` instead of `<...>` to specify type arguments
   |
LL |     Vec::<i32>::new();
   |        ^^

error: comparison operators cannot be chained
  --> $DIR/issue-40396.rs:6:20
   |
LL |     (0..13).collect<Vec<i32>();
   |                    ^^^^^
   |
help: split the comparison into two...
   |
LL |     (0..13).collect < Vec && Vec <i32>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: ...or parenthesize one of the comparisons
   |
LL |     ((0..13).collect < Vec) <i32>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
help: use `::<...>` instead of `<...>` to specify type arguments
   |
LL |     (0..13).collect::<Vec<i32>();
   |                    ^^

error: aborting due to 3 previous errors

